# kube-workshop

./: README.md  docker-compose.yml  push.sh
cronkite-service/: Dockerfile  README.md  build.sh  pyproject.toml  run.sh
cronkite-service/cronkite_service/: app.py  enum_types.py  predict.py  train.py
cronkite-service/tests/: test_cronkite_service.py
flask-web/: .env  .flaskenv  Dockerfile  README.md  build.sh  run.sh
flask-web/.devcontainer/: Dockerfile
flask-web/flask_web/: app.py
flask-web/flask_web/cronkite/: client.py
flask-web/flask_web/static/styles/: index.css
flask-web/flask_web/templates/: index.html
flask-web/tests/: test_flask_web.py
k8s/: guestbook.yaml
k8s/cronkite-service/: deployment.yaml  service.yaml
k8s/flask-web/: deployment.yaml  service.yaml
k8s/guestbook-app/: redis.yaml
