[tool.poetry]
name = "cronkite-service"
version = "0.1.0"
description = ""
authors = ["Collin Choy <collin@ripplematch.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.0"
uvicorn = "^0.11.8"
numpy = "^1.19.1"
pandas = "^1.1.0"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.8.3"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
train_cronkite = "cronkite_service.train:main"
